
  * Fixed bug in library updated when only changed dir name
  * Added option in last.fm panel to copy element info text to clipboard
  * Update the library automatically if detects an old version installed
  * Tracks passed in command line will be played by default
  * Edited tracks will be updated if it was in player playlist
  * Implemented Playlists. Static and Dynamic
  * Fixed crash when trying to read tags from a missing file.
  * The track playcount is updated when the track have been played at least
    the half of its length.
  * Fixed a bug in player. Now Prev Track when stopped update the info
  * Now you can edit the rating of a track from the Player current track
    info. To do it move the mouse up and down while clicking on rating starts.
  * Added bitrate, rating, playcount, lastplay, added time  to tracks database
  * Fixed crash when using 'Edit labes' in artists or songs with no artist
    or no songs selected


2009-06-25 0.1.1
  * Play/Enqueue in RadioStations was not implemented. Fixed now.
  * Added Custom commands that are accesible from contextual menu in Artist,
    Albums, Songs and Playlist 
  * Removed the need of the wxWidgets media library not present by default
    in many distributions.
  * Added amazon search engine for covers.
  * The new/updated/removed covers are updated in library too.
  * Double click on artistname or albumname in player panel current track
    will select the artist or the album in the library.
  * Fixed bug in cover editor that blocked gui randomly
  * The tracks editor now can edit images stored in id3tags
  * Fixed bug saving special chars to id3 tags
  * Player shows the cover stored in the id3tags before attempt to load the
    album cover.
  * Added support to ReplayGain tags
  * Show the bitrate of the current track.
  * Improved library update. Now more faster.
  * Added Play/Enqueue options to Last.fm panel items
  * Playlist current track now follow theme color